NOISSUE - Use Thing ID to update certs data (#827)
* Use ThingID to update certs


* Fix logging typo


* Update API tests and service mock
